--- a/index.html
+++ b/index.html
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Shopping List</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <div id="container">
-      <h1 id="listTitle">Shopping List</h1>
-      <button id="editTitleBtn">Edit Title</button>
-      <input type="text" id="titleInput" style="display: none;">
-      <button id="save-title-btn">Save Title</button>
-      <div class="input_wrapper">
-        <input type="text" id="itemInput" placeholder="Skriv inn vare...">
-        <button id="addItemBtn">Legg til</button>
-      </div>
-      
-      <ul id="shoppingList"></ul>
-      <div id="buttons">
-        <button id="clearListBtn">Clear List</button>
-        <button id="saveListBtn">Save List</button>
-      </div>
-    </div>
-    <script src="script.js"></script>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Innom - Handleliste</title>
+        <link rel="stylesheet" href="styles.css">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+        <header>
+            <div class="header_left">
+                <img id="logo" src="./assets/innom_logo_hvit.svg">
+            </div>
+            <div class="header_right"></div>
+            <div class="header_mobile_menu">
+                <img id="hamburger_menu_icon" src="./assets/hamburger_icon_white.svg">
+            </div>
+        </header>
+        <div id="container">
+            <h1 id="listTitle">Shopping List</h1>
+            <button id="editTitleBtn" onclick="revealTitleInput()"><img id="edit-icon-blue" src="./assets/edit_icon_blue.svg"></button>
+            <div class="list_title_wrapper">
+                <input type="text" id="titleInput" style="display: none;">
+                <button id="save-title-btn">Lagre</button>
+            </div>
+        </div>
+        <div id="shopping_list_container">
+        <div class="input_wrapper">
+            <input type="text" id="itemInput" placeholder="Skriv inn vare...">
+            <button id="addItemBtn">Legg til</button>
+        </div>
+            <ul id="shoppingList">
+                <div id="empty_list">
+                    <h3>Her var det tomt...</h3>
+                </div>
+            </ul>
+        </div>
+        <div id="bottom_bar">
+            <button id="clearListBtn">Tøm liste</button>
+            <button id="saveListBtn" onclick="changeToSaved()">Lagre liste</button>
+        </div>
+        <script src="script.js"></script>
+    </body>
 </html>
