--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Innom - Handleliste</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://use.typekit.net/xpi1scr.css">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -38,8 +39,8 @@
             </ul>
         </div>
         <div id="bottom_bar">
-            <button id="clearListBtn">Tøm liste</button>
             <button id="saveListBtn" onclick="changeToSaved()">Lagre liste</button>
+            <button id="clearListBtn"><img src="./assets/trash_icon_blue.svg">Tøm liste</button>
         </div>
         <script src="script.js"></script>
     </body>
