--- a/index.html
+++ b/index.html
@@ -15,15 +15,21 @@
             <div class="header_left">
                 <img id="logo" src="./assets/innom_logo_hvit.svg">
             </div>
-            <div class="header_right"></div>
+            <div class="header_right">
+                <div id="header_links">
+                    <p>Kampanjer</p>
+                    <p>Min side</p>
+                    <p>Handlekurv</p>
+                </div>
+            </div>
             <div class="header_mobile_menu">
                 <img id="hamburger_menu_icon" src="./assets/hamburger_icon_white.svg">
             </div>
         </header>
         <main>
         <div id="container">
-            <h1 id="listTitle">Shopping List</h1>
-            <button id="editTitleBtn" onclick="revealTitleInput()"><img id="edit-icon-blue" src="./assets/edit_icon_blue.svg"></button>
+            <h1 id="listTitle">Min handleliste</h1>
+            <button id="editTitleBtn" onclick="revealTitleInput()"><img id="edit-icon-blue" src="./assets/edit_icon_blue.svg"><img id="edit-icon-white" src="./assets/edit_icon_white.svg"></button>
             <div class="list_title_wrapper">
                 <input type="text" id="titleInput" style="display: none;">
                 <button id="save-title-btn">Lagre</button>
