Added correct favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Innom - Handleliste</title>
-        <link rel="icon" type="image/x-icon" href="/assets/innom_logo_blå.svg">
+        <link rel="icon" type="image/x-icon" href="./assets/innom_logo_blå.svg">
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://use.typekit.net/xpi1scr.css">
         <meta name="description" content="">
