--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Innom - Handleliste</title>
         <link rel="icon" type="image/x-icon" href="./assets/innom_logo_blå.svg">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="./CSS/styles.css">
         <link rel="stylesheet" href="https://use.typekit.net/xpi1scr.css">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -53,6 +53,6 @@
             </div>
         </div>
         </main> 
-        <script src="script.js"></script>
+        <script src="./JS/script.js"></script>
     </body>
 </html>
